--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -3,7 +3,9 @@
     <div class="cover-inner">
       <div class="cover-contents">
         <h1>みんなでゴルフ場にいってみませんか？</h1>
-        <a href="" class="btn btn-success btn-lg">シェアごるを始める</a>
+        <% unless logged_in? %>
+         <%= link_to 'シェアごるを始める', signup_path, class: 'btn btn-success btn-lg' %>
+        <% end %>
       </div>
     </div>
   </div>
