--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,10 +14,10 @@
       <ul class="nav navbar-nav navbar-right">
           <% if logged_in? %>
           <li>
-              <a href="#">
+              <%= link_to new_course_path do %>
                 <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                 コースを探す
-                </a>
+              <% end %>
           </li>
           
           　<li class="dropdown">
