--- a/app/views/courses/_courses.html.erb
+++ b/app/views/courses/_courses.html.erb
@@ -5,7 +5,7 @@
         <div class="col-md-3 col-sm-4 col-xs-12">
           <div class="panel panel-default">
             <div class="panel-heading text-center">
-              <img src="<%= course.image_url %>" alt="" >
+              <img src="<%= course.course_image_url %>" alt="" >
             </div>
             <div class="panel-body">
               <p class="course-title"><%= course.name %></p>
