--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,21 @@
   <div class="icon text-center">
     <img src="<%= gravatar_url(@user, size: 100) %>" alt="" class="img-circle">
   </div>
+  
   <div class="name text-center">
     <h1><%= @user.name %></h1>
   </div>
+  
+  <div class="status text-center">
+    <ul>
+      <li>
+        <div class="status-label">Gone</div>
+        <div id="gone_count" class="status-value">
+          <%= @count_gone %>
+        </div>
+      </li>
+
+    </ul>
+  </div>
 </div>
+<%= render 'courses/courses', courses: @courses %>
