ranking and adding API

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -8,7 +8,7 @@
         <div class="panel-body">
           <p class="course-title"><%= @course.name %></p>
           <div class="buttons text-center">
-            <%= render 'gones/gone_button', course: @course %>
+            <%= render 'wents/gone_button', course: @course %>
           </div>
         </div>
       </div>
