--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
   <div class="status text-center">
     <ul>
       <li>
-        <div class="status-label">Gone</div>
+        <div class="status-label">行ってみたい！</div>
         <div id="gone_count" class="status-value">
           <%= @count_gone %>
         </div>
