--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -2,7 +2,8 @@
   <div class="cover">
     <div class="cover-inner">
       <div class="cover-contents">
-        <h1>みんなでゴルフ場にいってみませんか？</h1>
+        <h1>行ってみたいゴルフ場を探しましょう！！</h1>
+         <h4>～始めたばっかりの人たちと少しでも上達を目指して～</h2>
         <% unless logged_in? %>
          <%= link_to 'シェアごるを始める', signup_path, class: 'btn btn-success btn-lg' %>
         <% end %>
