--- a/app/views/courses/_courses.html.erb
+++ b/app/views/courses/_courses.html.erb
@@ -14,6 +14,7 @@
                 <p class="course-title2">楽天口コミの評価：<%= course.evaluation %></p>
                <% else %>
                 <p class="course-title"><%= course.name %></p>
+                <p class="course-title2">楽天口コミの評価：<%= course.evaluation %></p>
                <% end %>
               
               <div class="buttons text-center">
