--- a/app/views/wents/_gone_button.html.erb
+++ b/app/views/wents/_gone_button.html.erb
@@ -6,7 +6,7 @@
     <%= hidden_field_tag :course_code, course.code %>
     
     
-  <%= form_tag(gone_path(course.id), method: :delete) do %>
+  <%= form_tag(went_path(course.id), method: :delete) do %>
     <%= hidden_field_tag :course_id, course.id %>
     
     
@@ -14,7 +14,7 @@
     <%= submit_tag '行きたくない。。', class: 'btn btn-success' %>
   <% end %>
 <% else %>
-  <%= form_tag(gones_path) do %>
+  <%= form_tag(wents_path) do %>
     <%= hidden_field_tag :course_code, course.code %>
     <%= hidden_field_tag :course_name, course.name %>
     <%= hidden_field_tag :type, 'Gone' %>
